* Possibility to show contest graph in team interface
* Possibility to show team place among other teams in the team interface

rel 0.1.6
* HQ: table - hyperlinks in popup info 

rel 0.1.5
* chroust: do not change ref_ids when the chroust is re-executed 
* Adding more colors for data series in chart on team-rank screen
* HQ: display table of actual team order
* HQ: event log - team filter - display teams in alphabetical order
* HQ: event log - hint IDs and solution IDs are clickable
* HQ: table - grey out unused fields
* HQ: table - better separate rows for each team
* HQ: table - display some popup info on click on time field
* HQ: event log - autoupdate

rel 0.1.4
* metadata.ini: In case value for [solution].id is not set, the value 
  from [solution].next_cgrp_id prefixed with 'KEY-' is used
* Introducing replacements of <file-[type][number]> tag in text files
* chroust accept new --verbose switch
* chroust: adding colored output
* chroust: check that graph of clues/solutions is continuous

rel 0.1.3
* fixing bug in calculating team ranks
* limit for display countdowns is configurable in global ini file
* new type of clues - marked with question mark
* check doubled request when spending coin
* display solutions on HQ screen 

rel 0.1.2
* HQ: Reworked the overview table

rel 0.1.1
* HQ: display team rank order

rel 0.1.0
* Set timezone in config file
* Adding ability to gain coins and buy hints
* metadata.ini: attribute solution.final renamed to cgrp.final
* metadata.ini: Unit (h, m or s) could be specified for timeouts
* Introducing hidden clues
* Ability to send email notification when a team find solution
* Adding new view showing all clues and hints on single screen

 
rel 0.0.10