@@ -1,5 +1,6 @@
 * Possibility to show contest graph in team interface
 * Possibility to show team place among other teams in the team interface
+* HQ: contest graph - can display graph in simplified form
 
 rel 0.1.6
 * HQ: table - hyperlinks in popup info 
